fix(styles): only apply `scrollbar-gutter` to certain elements

--- a/src/components/NavDock.module.scss
+++ b/src/components/NavDock.module.scss
@@ -4,6 +4,7 @@
   top: 0;
   z-index: var(--layer-nav);
   pointer-events: none;
+  scrollbar-gutter: stable both-edges;
 }
 
 .Dock {
