--- a/src/components/Page.module.scss
+++ b/src/components/Page.module.scss
@@ -1,6 +1,8 @@
 @use "../styles/queries";
 
 :global(main) {
+  scrollbar-gutter: stable both-edges;
+
   @media not (prefers-reduced-motion: reduce) {
     animation: slideFadeIn var(--duration-medium) var(--easing);
   }
