--- a/src/components/effects/GlowingBackground.module.scss
+++ b/src/components/effects/GlowingBackground.module.scss
@@ -19,7 +19,7 @@
   height: 200%;
   user-select: none;
   pointer-events: none;
-  opacity: 0.3;
+  opacity: 0.25;
   z-index: var(--layer-effect);
   transition: opacity 5s, top 1.5s var(--easing);
 
